--- a/Front/usuario.html
+++ b/Front/usuario.html
@@ -1,92 +1,181 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gestión de Usuarios</title>
-  <style>
-    body { font-family: Arial; margin: 40px; }
-    input, button { margin: 5px; padding: 8px; }
-    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-    th, td { border: 1px solid #ddd; padding: 8px; }
-    th { background-color: #0078D7; color: white; }
-  </style>
+    <meta charset="UTF-8">
+    <title>Gestión de Usuarios</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <h1>Usuarios</h1>
+<body class="bg-light">
 
-  <h3>Registrar nuevo usuario</h3>
-  <form id="formUsuario">
-    <input type="text" id="username" placeholder="Nombre de usuario" required />
-    <input type="password" id="password" placeholder="Contraseña" required />
-    <input type="email" id="email" placeholder="Correo" required />
-    <input type="text" id="estado" placeholder="Estado" required />
-    <input type="number" id="idRol" placeholder="ID Rol" required />
-    <button type="submit">Guardar</button>
-  </form>
+<div class="container py-5">
+    <h1 class="text-center mb-5">Gestión de Usuarios</h1>
 
-  <h3>Lista de Usuarios</h3>
-  <table id="tablaUsuarios">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Usuario</th>
-        <th>Email</th>
-        <th>Estado</th>
-        <th>Rol</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+    <!-- Crear usuario -->
+    <div class="card mb-4">
+        <div class="card-header bg-primary text-white">Crear Usuario</div>
+        <div class="card-body">
+            <div class="mb-3">
+                <input id="username" class="form-control" placeholder="Username">
+            </div>
+            <div class="mb-3">
+                <input id="password" type="password" class="form-control" placeholder="Password">
+            </div>
+            <div class="mb-3">
+                <input id="email" class="form-control" placeholder="Email">
+            </div>
+            <div class="mb-3">
+                <input id="estado" class="form-control" placeholder="Estado">
+            </div>
+            <div class="mb-3">
+                <input id="idRol" type="number" class="form-control" placeholder="ID de Rol">
+            </div>
+            <button onclick="crearUsuario()" class="btn btn-success">Crear</button>
+        </div>
+    </div>
 
-  <script>
-    
-   const API_URL = 'http://localhost:3000/auth/signup';
+    <!-- Listar usuarios con tabla -->
+    <div class="card mb-4">
+        <div class="card-header bg-info text-white">Usuarios Registrados</div>
+        <div class="card-body">
+            <button onclick="listarUsuarios()" class="btn btn-primary mb-3">Cargar Usuarios</button>
+            <div class="table-responsive" style="max-height:400px; overflow:auto;">
+                <table class="table table-striped table-bordered" id="tablaUsuarios">
+                    <thead class="table-dark">
+                        <tr>
+                            <th>ID</th>
+                            <th>Username</th>
+                            <th>Email</th>
+                            <th>Estado</th>
+                            <th>ID Rol</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Aquí se llenará dinámicamente -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
+    <!-- Buscar usuario -->
+    <div class="card mb-4">
+        <div class="card-header bg-warning text-dark">Buscar Usuario por ID</div>
+        <div class="card-body">
+            <div class="input-group mb-3">
+                <input id="buscarId" type="number" class="form-control" placeholder="ID del usuario">
+                <button onclick="buscarUsuario()" class="btn btn-outline-secondary">Buscar</button>
+            </div>
+            <div id="resultado"></div>
+        </div>
+    </div>
 
-    // Mostrar usuarios
-    async function cargarUsuarios() {
-      const res = await fetch(API_URL);
-      const data = await res.json();
-      const tbody = document.querySelector('#tablaUsuarios tbody');
-      tbody.innerHTML = '';
-      data.forEach(u => {
-        const fila = `<tr>
-          <td>${u.id}</td>
-          <td>${u.username}</td>
-          <td>${u.email}</td>
-          <td>${u.estado}</td>
-          <td>${u.idRol}</td>
-        </tr>`;
-        tbody.innerHTML += fila;
-      });
+    <!-- Actualizar -->
+    <div class="card mb-4">
+        <div class="card-header bg-secondary text-white">Actualizar Usuario</div>
+        <div class="card-body">
+            <input id="updateId" type="number" class="form-control mb-2" placeholder="ID del usuario">
+            <input id="updateUsername" class="form-control mb-2" placeholder="Nuevo username">
+            <input id="updateEmail" class="form-control mb-2" placeholder="Nuevo email">
+            <input id="updateEstado" class="form-control mb-2" placeholder="Nuevo estado">
+            <input id="updatePassword" class="form-control mb-2" placeholder="Nueva contraseña">
+            <input id="updateIdRol" type="number" class="form-control mb-3" placeholder="Nuevo ID Rol">
+            <button onclick="actualizarUsuario()" class="btn btn-warning">Actualizar</button>
+        </div>
+    </div>
+
+    <!-- Eliminar -->
+    <div class="card mb-4">
+        <div class="card-header bg-danger text-white">Eliminar Usuario</div>
+        <div class="card-body">
+            <div class="input-group mb-3">
+                <input id="deleteId" type="number" class="form-control" placeholder="ID a eliminar">
+                <button onclick="eliminarUsuario()" class="btn btn-danger">Eliminar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+    const API = "http://localhost:3000/usuario";
+
+    async function crearUsuario() {
+        const data = {
+            username: document.getElementById("username").value,
+            password: document.getElementById("password").value,
+            email: document.getElementById("email").value,
+            estado: document.getElementById("estado").value,
+            idRol: parseInt(document.getElementById("idRol").value)
+        };
+
+        const res = await fetch(API, {
+            method: "POST",
+            headers: {'Content-Type': 'application/json'},
+            body: JSON.stringify(data)
+        });
+
+        alert(await res.text());
     }
 
-    // Registrar usuario
-    document.querySelector('#formUsuario').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const nuevo = {
-        username: document.getElementById('username').value,
-        password: document.getElementById('password').value,
-        email: document.getElementById('email').value,
-        estado: document.getElementById('estado').value,
-        idRol: document.getElementById('idRol').value
-      };
-      const res = await fetch(API_URL, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(nuevo)
-      });
-      if (res.ok) {
-        alert('Usuario registrado correctamente');
-        cargarUsuarios();
-        e.target.reset();
-      } else {
-        alert('Error al registrar usuario');
-      }
-    });
+    async function listarUsuarios() {
+        const res = await fetch(API);
+        const data = await res.json();
 
-    cargarUsuarios();
-  </script>
+        const tbody = document.getElementById("tablaUsuarios").getElementsByTagName("tbody")[0];
+        tbody.innerHTML = ""; // Limpiar tabla antes de llenarla
+
+        data.forEach(usuario => {
+            const fila = document.createElement("tr");
+            fila.innerHTML = `
+                <td>${usuario.id}</td>
+                <td>${usuario.username}</td>
+                <td>${usuario.email}</td>
+                <td>${usuario.estado}</td>
+                <td>${usuario.idRol}</td>
+            `;
+            tbody.appendChild(fila);
+        });
+    }
+
+    async function buscarUsuario() {
+        const id = document.getElementById("buscarId").value;
+        const res = await fetch(API + "/" + id);
+        const data = await res.json();
+
+        document.getElementById("resultado").innerHTML =
+            "<pre>" + JSON.stringify(data, null, 2) + "</pre>";
+    }
+
+    async function actualizarUsuario() {
+        const id = document.getElementById("updateId").value;
+
+        const data = {
+            username: document.getElementById("updateUsername").value,
+            email: document.getElementById("updateEmail").value,
+            estado: document.getElementById("updateEstado").value,
+            password: document.getElementById("updatePassword").value,
+            idRol: parseInt(document.getElementById("updateIdRol").value)
+        };
+
+        const res = await fetch(API + "/" + id, {
+            method: "PUT",
+            headers: {'Content-Type': 'application/json'},
+            body: JSON.stringify(data)
+        });
+
+        alert(await res.text());
+    }
+
+    async function eliminarUsuario() {
+        const id = document.getElementById("deleteId").value;
+
+        const res = await fetch(API + "/" + id, { method: "DELETE" });
+        alert(await res.text());
+    }
+</script>
+
 </body>
 </html>
