--- a/Front/index.html
+++ b/Front/index.html
@@ -84,6 +84,7 @@
             <li class="nav-item"><a class="nav-link" href="tipo_pago.html">Tipo de Pago</a></li>
             <li class="nav-item"><a class="nav-link" href="calificacion.html">Calificaciones</a></li>
             <li class="nav-item"><a class="nav-link" href="asistencia.html">Asistencias</a></li>
+             <li class="nav-item"><a class="nav-link" href="usuarios.html">USUARIOS</a></li>
 
             <hr class="sidebar-divider d-none d-md-block">
         </ul>
