Registros visibles en roles
Registros visibles en roles

--- a/Front/rol.html
+++ b/Front/rol.html
@@ -25,12 +25,6 @@
             background: linear-gradient(180deg, #4e73df 10%, #224abe 100%) !important;
         }
 
-        .sidebar .nav-item .nav-link {
-            padding: 12px 20px;
-            border-radius: 8px;
-            transition: 0.2s;
-        }
-
         .sidebar .nav-item .nav-link:hover {
             background-color: rgba(255, 255, 255, 0.15);
             transform: translateX(5px);
@@ -46,10 +40,6 @@
             transform: translateY(-4px);
             box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
         }
-
-        footer {
-            border-top: 1px solid #ddd;
-        }
     </style>
 </head>
 
@@ -58,26 +48,27 @@
 
         <!-- SIDEBAR -->
         <ul class="navbar-nav sidebar sidebar-dark accordion" id="accordionSidebar">
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center">
                 <div class="sidebar-brand-text mx-3">Instituto</div>
             </a>
+
             <hr class="sidebar-divider">
             <div class="sidebar-heading">Gestión Académica</div>
-            <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-            <li class="nav-item"><a class="nav-link" href="rol.html">Roles</a></li>
+
+            <li class="nav-item active"><a class="nav-link" href="rol.html">Roles</a></li>
             <li class="nav-item"><a class="nav-link" href="usuario.html">Usuarios</a></li>
             <li class="nav-item"><a class="nav-link" href="profesor.html">Profesores</a></li>
             <li class="nav-item"><a class="nav-link" href="carrera.html">Carreras</a></li>
             <li class="nav-item"><a class="nav-link" href="curso.html">Cursos</a></li>
             <li class="nav-item"><a class="nav-link" href="encargado.html">Encargados</a></li>
-            <li class="nav-item active"><a class="nav-link" href="encargado_estudiante.html">Encargados - Estudiante</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="encargado_estudiante.html">Encargados - Estudiante</a></li>
             <li class="nav-item"><a class="nav-link" href="estudiante.html">Estudiantes</a></li>
             <li class="nav-item"><a class="nav-link" href="matricula.html">Matrícula</a></li>
             <li class="nav-item"><a class="nav-link" href="pago.html">Pagos</a></li>
             <li class="nav-item"><a class="nav-link" href="tipo_pago.html">Tipos de Pago</a></li>
             <li class="nav-item"><a class="nav-link" href="calificacion.html">Calificaciones</a></li>
             <li class="nav-item"><a class="nav-link" href="asistencia.html">Asistencias</a></li>
+
             <hr class="sidebar-divider d-none d-md-block">
         </ul>
         <!-- FIN SIDEBAR -->
@@ -88,43 +79,14 @@
 
                 <!-- TOPBAR -->
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 shadow">
-                    <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 navbar-search">
-                        <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Buscar rol...">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button"><i
-                                        class="fas fa-search fa-sm"></i></button>
-                            </div>
-                        </div>
-                    </form>
-
-                    <!-- NOTIFICACIONES -->
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item dropdown no-arrow mx-1">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
-                                <i class="fas fa-bell fa-fw"></i>
-                                <span class="badge badge-danger badge-counter">3+</span>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right shadow">
-                                <h6 class="dropdown-header">Notificaciones del Instituto</h6>
-                                <a class="dropdown-item"><strong>Hoy:</strong> Nuevo rol registrado.</a>
-                            </div>
-                        </li>
-
                         <li class="nav-item dropdown no-arrow">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
-                                <span class="ml-2 d-none d-lg-inline text-dark">Administrador del Instituto</span>
+                            <a class="nav-link dropdown-toggle">
+                                <span class="text-dark">Administrador del Instituto</span>
                             </a>
-                            <div class="dropdown-menu dropdown-menu-right shadow">
-                                <a class="dropdown-item" href="#">Perfil</a>
-                                <a class="dropdown-item" href="#">Configuración</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item text-danger" href="#">Cerrar sesión</a>
-                            </div>
                         </li>
                     </ul>
                 </nav>
-                <!-- FIN TOPBAR -->
 
                 <!-- CONTENIDO PRINCIPAL -->
                 <div class="container-fluid">
@@ -135,11 +97,13 @@
                         <div class="card-header bg-success text-white">Registrar Rol</div>
                         <div class="card-body">
                             <input id="nombreRol" type="text" class="form-control mb-2" placeholder="Nombre del Rol">
-                            <select id="estadoRol" class="form-select mb-2">
+
+                            <select id="estadoRol" class="form-control mb-2">
                                 <option value="">Seleccione Estado</option>
                                 <option value="Activo">Activo</option>
                                 <option value="Inactivo">Inactivo</option>
                             </select>
+
                             <button onclick="crearRol()" class="btn btn-success">Registrar</button>
                         </div>
                     </div>
@@ -148,6 +112,7 @@
                     <div class="card mb-4">
                         <div class="card-header bg-info text-white">Roles Registrados</div>
                         <div class="card-body">
+
                             <button onclick="listarRoles()" class="btn btn-primary mb-3">Cargar Roles</button>
 
                             <div class="table-responsive" style="max-height:400px; overflow:auto;">
@@ -159,103 +124,83 @@
                                             <th>Estado</th>
                                             <th>Fecha de Creación</th>
                                             <th>Fecha de Modificación</th>
-                                            <th>Fecha de Eliminación</th> <!-- OPCIONAL -->
+                                            <th>Fecha de Eliminación</th>
                                         </tr>
                                     </thead>
                                     <tbody class="text-center"></tbody>
                                 </table>
                             </div>
+
                         </div>
                     </div>
 
-                    <!-- ACTUALIZAR ROL -->
+                    <!-- ACTUALIZAR -->
                     <div class="card mb-4">
                         <div class="card-header bg-warning text-dark">Actualizar Rol</div>
                         <div class="card-body">
+
                             <input id="updateId" type="number" class="form-control mb-2" placeholder="ID del Rol">
+
                             <input id="updateNombre" type="text" class="form-control mb-2"
                                 placeholder="Nuevo Nombre del Rol">
-                            <select id="updateEstado" class="form-select mb-2">
-                                <option value="">Seleccione Nuevo Estado</option>
+
+                            <select id="updateEstado" class="form-control mb-2">
+                                <option value="">Seleccione Estado</option>
                                 <option value="Activo">Activo</option>
                                 <option value="Inactivo">Inactivo</option>
                             </select>
+
                             <button onclick="actualizarRol()" class="btn btn-warning">Actualizar</button>
                         </div>
                     </div>
 
-                    <!-- ELIMINAR ROL -->
+                    <!-- ELIMINAR -->
                     <div class="card mb-4">
                         <div class="card-header bg-danger text-white">Eliminar Rol</div>
                         <div class="card-body">
-                            <input id="deleteId" type="number" class="form-control mb-2" placeholder="ID a eliminar">
+
+                            <input id="deleteId" type="number" class="form-control mb-2" placeholder="ID del Rol">
+
                             <button onclick="eliminarRol()" class="btn btn-danger">Eliminar</button>
                         </div>
                     </div>
 
                 </div>
-                <!-- FIN CONTENIDO PRINCIPAL -->
-
             </div>
 
             <!-- FOOTER -->
             <footer class="sticky-footer bg-white">
                 <div class="container text-center">
-                    <span>© Instituto Académico 2025 · Lenguajes de BD</span>
+                    <span>© Instituto Académico 2025</span>
                 </div>
             </footer>
         </div>
     </div>
 
-    <!-- SCRIPTS NECESARIOS -->
+    <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.4/js/sb-admin-2.min.js"></script>
 
     <script>
-        const API_ROLES = "http://localhost:3000/roles"; // Cambiar a tu endpoint de roles
+        const API = "http://localhost:3000/roles";
 
+        /* CREAR */
         async function crearRol() {
             const data = {
-                nombre: document.getElementById("nombreRol").value,
+                cargo: document.getElementById("nombreRol").value,
                 estado: document.getElementById("estadoRol").value
             };
-            const res = await fetch(API_ROLES, { method: "POST", headers: { 'Content-Type': 'application/json' }, body: JSON.stringify(data) });
-            alert(await res.text());
-        }
 
-        async function listarRoles() {
-            const res = await fetch(API_ROLES);
-            const data = await res.json();
-            const tbody = document.getElementById("tablaRoles").getElementsByTagName("tbody")[0];
-            tbody.innerHTML = "";
-            data.forEach(item => {
-                const fila = document.createElement("tr");
-                fila.innerHTML = `<td>${item.id}</td><td>${item.nombre}</td><td>${item.estado}</td><td>${item.fechaCreacion}</td><td>${item.fechaModificacion}</td>`;
-                tbody.appendChild(fila);
+            const res = await fetch(API + "/signup", {
+                method: "POST",
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(data)
             });
-        }
 
-        async function actualizarRol() {
-            const id = document.getElementById("updateId").value;
-            const data = {
-                nombre: document.getElementById("updateNombre").value,
-                estado: document.getElementById("updateEstado").value
-            };
-            const res = await fetch(API_ROLES + "/" + id, { method: "PUT", headers: { 'Content-Type': 'application/json' }, body: JSON.stringify(data) });
             alert(await res.text());
         }
 
-        async function eliminarRol() {
-            const id = document.getElementById("deleteId").value;
-            const res = await fetch(API_ROLES + "/" + id, { method: "DELETE" });
-            alert(await res.text());
-        }
-
-
-    </script>
-
-    <script>
+        /* LISTAR */
         async function listarRoles() {
             const tbody = document.querySelector("#tablaRoles tbody");
             tbody.innerHTML = "";
@@ -265,36 +210,17 @@
                 const roles = await res.json();
 
                 roles.forEach(rol => {
-
-                    // NORMALIZAR CAMPOS
-                    const fechaCreacion =
-                        rol.created_at ||
-                        rol.creado_en ||
-                        rol.CREADO_EN ||
-                        "----";
-
-                    const fechaActualizacion =
-                        rol.updated_at ||
-                        rol.actualizado_en ||
-                        rol.actualizado_at ||
-                        rol.UPDATED_AT ||
-                        "----";
-
-                    const fechaEliminacion =
-                        rol.deleted_at ||
-                        rol.eliminado_en ||
-                        rol.ELIMINADO_EN ||
-                        "----";
-
                     const tr = document.createElement("tr");
 
                     tr.innerHTML = `
-<td>${rol.id}</td>
-<td>${rol.cargo}</td>
-<td>${rol.estado}</td>
-<td>${fechaCreacion}</td>
-<td>${fechaActualizacion}</td>
-            `;
+<td>${rol.ID}</td>
+<td>${rol.NOMBRE}</td>
+<td>${rol.ESTADO}</td>
+<td>${rol.FECHA_CREACION || "----"}</td>
+<td>${rol.FECHA_ACTUALIZACION || "----"}</td>
+<td>${rol.FECHA_ELIMINACION || "----"}</td>
+`;
+
                     tbody.appendChild(tr);
                 });
 
@@ -302,6 +228,33 @@
                 console.error(err);
                 alert("Error cargando roles");
             }
+        }
+
+        /* ACTUALIZAR */
+        async function actualizarRol() {
+            const id = document.getElementById("updateId").value;
+
+            const data = {
+                cargo: document.getElementById("updateNombre").value,
+                estado: document.getElementById("updateEstado").value
+            };
+
+            const res = await fetch(API + "/" + id, {
+                method: "PUT",
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(data)
+            });
+
+            alert(await res.text());
+        }
+
+        /* ELIMINAR */
+        async function eliminarRol() {
+            const id = document.getElementById("deleteId").value;
+
+            const res = await fetch(API + "/" + id, { method: "DELETE" });
+
+            alert(await res.text());
         }
     </script>
 
