--- a/Front/usuario.html
+++ b/Front/usuario.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <title>Gestión de Usuarios</title>
 
-    <!-- FUENTES -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700,900" rel="stylesheet">
-
-    <!-- BOOTSTRAP + SB ADMIN 2 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.4/css/sb-admin-2.min.css" rel="stylesheet">
 
@@ -16,35 +13,21 @@
             font-family: "Nunito", sans-serif;
             background-color: #f4f6f9;
         }
-
         .sidebar {
             background: linear-gradient(180deg, #4e73df 10%, #224abe 100%) !important;
         }
-
-        .sidebar .nav-item .nav-link {
+        .sidebar .nav-link {
             padding: 12px 20px;
             border-radius: 8px;
             transition: 0.2s;
         }
-
-        .sidebar .nav-item .nav-link:hover {
-            background-color: rgba(255,255,255,0.15);
+        .sidebar .nav-link:hover {
+            background: rgba(255,255,255,0.15);
             transform: translateX(5px);
         }
-
         .card {
             border-radius: 16px !important;
             border: none;
-            transition: 0.25s;
-        }
-
-        .card:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
-        }
-
-        footer {
-            border-top: 1px solid #ddd;
         }
     </style>
 </head>
@@ -57,25 +40,27 @@
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
             <div class="sidebar-brand-text mx-3">Instituto</div>
         </a>
+
         <hr class="sidebar-divider">
         <div class="sidebar-heading">Gestión Académica</div>
-         <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-    <li class="nav-item"><a class="nav-link" href="rol.html">Roles</a></li>
-    <li class="nav-item"><a class="nav-link" href="usuario.html">Usuarios</a></li>
-    <li class="nav-item"><a class="nav-link" href="profesor.html">Profesores</a></li>
-    <li class="nav-item"><a class="nav-link" href="carrera.html">Carreras</a></li>
-    <li class="nav-item"><a class="nav-link" href="curso.html">Cursos</a></li>
-    <li class="nav-item"><a class="nav-link" href="encargado.html">Encargados</a></li>
-    <li class="nav-item active"><a class="nav-link" href="encargado_estudiante.html">Encargados - Estudiante</a></li>
-    <li class="nav-item"><a class="nav-link" href="estudiante.html">Estudiantes</a></li>
-    <li class="nav-item"><a class="nav-link" href="matricula.html">Matrícula</a></li>
-    <li class="nav-item"><a class="nav-link" href="pago.html">Pagos</a></li>
-    <li class="nav-item"><a class="nav-link" href="tipo_pago.html">Tipos de Pago</a></li>
-    <li class="nav-item"><a class="nav-link" href="calificacion.html">Calificaciones</a></li>
-    <li class="nav-item"><a class="nav-link" href="asistencia.html">Asistencias</a></li>
+
+        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="rol.html">Roles</a></li>
+        <li class="nav-item active"><a class="nav-link" href="usuario.html">Usuarios</a></li>
+        <li class="nav-item"><a class="nav-link" href="profesor.html">Profesores</a></li>
+        <li class="nav-item"><a class="nav-link" href="carrera.html">Carreras</a></li>
+        <li class="nav-item"><a class="nav-link" href="curso.html">Cursos</a></li>
+        <li class="nav-item"><a class="nav-link" href="encargado.html">Encargados</a></li>
+        <li class="nav-item"><a class="nav-link" href="encargado_estudiante.html">Encargados - Estudiante</a></li>
+        <li class="nav-item"><a class="nav-link" href="estudiante.html">Estudiantes</a></li>
+        <li class="nav-item"><a class="nav-link" href="matricula.html">Matrícula</a></li>
+        <li class="nav-item"><a class="nav-link" href="pago.html">Pagos</a></li>
+        <li class="nav-item"><a class="nav-link" href="tipo_pago.html">Tipos de Pago</a></li>
+        <li class="nav-item"><a class="nav-link" href="calificacion.html">Calificaciones</a></li>
+        <li class="nav-item"><a class="nav-link" href="asistencia.html">Asistencias</a></li>
+
         <hr class="sidebar-divider d-none d-md-block">
     </ul>
-    <!-- FIN SIDEBAR -->
 
     <!-- CONTENIDO -->
     <div id="content-wrapper" class="d-flex flex-column">
@@ -83,127 +68,107 @@
 
             <!-- TOPBAR -->
             <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 shadow">
-                <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 navbar-search">
+                <form class="d-none d-sm-inline-block form-inline ml-3 my-2 navbar-search">
                     <div class="input-group">
                         <input type="text" class="form-control bg-light border-0 small" placeholder="Buscar usuario...">
                         <div class="input-group-append">
-                            <button class="btn btn-primary" type="button"><i class="fas fa-search fa-sm"></i></button>
+                            <button class="btn btn-primary"><i class="fas fa-search"></i></button>
                         </div>
                     </div>
                 </form>
 
-                <!-- USUARIO -->
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown no-arrow">
-                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
-                            <span class="ml-2 d-none d-lg-inline text-dark">Administrador del Instituto</span>
+                        <a class="nav-link dropdown-toggle" href="#">
+                            <span class="ml-2 text-dark">Administrador del Instituto</span>
                         </a>
-                        <div class="dropdown-menu dropdown-menu-right shadow">
-                            <a class="dropdown-item" href="#">Perfil</a>
-                            <a class="dropdown-item" href="#">Configuración</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item text-danger" href="#">Cerrar sesión</a>
-                        </div>
                     </li>
                 </ul>
             </nav>
-            <!-- FIN TOPBAR -->
 
             <!-- CONTENIDO PRINCIPAL -->
-            <div class="container-fluid py-4">
+            <div class="container-fluid">
+
                 <h1 class="h3 mb-4 text-gray-800">Gestión de Usuarios</h1>
 
-                <!-- Crear Usuario -->
+                <!-- CREAR -->
                 <div class="card mb-4">
                     <div class="card-header bg-primary text-white">Crear Usuario</div>
                     <div class="card-body">
-                        <div class="mb-3">
-                            <input id="username" class="form-control" placeholder="Username">
-                        </div>
-                        <div class="mb-3">
-                            <input id="password" type="password" class="form-control" placeholder="Password">
-                        </div>
-                        <div class="mb-3">
-                            <input id="email" class="form-control" placeholder="Email">
-                        </div>
-                        <div class="mb-3">
-                            <input id="estado" class="form-control" placeholder="Estado">
-                        </div>
-                        <div class="mb-3">
-                            <input id="idRol" type="number" class="form-control" placeholder="ID de Rol">
-                        </div>
+                        <input id="username" class="form-control mb-2" placeholder="Username">
+                        <input id="password" type="password" class="form-control mb-2" placeholder="Password">
+                        <input id="email" class="form-control mb-2" placeholder="Email">
+                        <input id="estado" class="form-control mb-2" placeholder="Estado">
+                        <input id="idRol" type="number" class="form-control mb-2" placeholder="ID Rol">
                         <button onclick="crearUsuario()" class="btn btn-success">Crear</button>
                     </div>
                 </div>
 
-                <!-- Listar Usuarios -->
+                <!-- LISTAR -->
                 <div class="card mb-4">
                     <div class="card-header bg-info text-white">Usuarios Registrados</div>
                     <div class="card-body">
                         <button onclick="listarUsuarios()" class="btn btn-primary mb-3">Cargar Usuarios</button>
-                        <div class="table-responsive" style="max-height:400px; overflow:auto;">
-                            <table class="table table-striped table-bordered" id="tablaUsuarios">
-                                <thead class="table-dark text-center">
+
+                        <div class="table-responsive" style="max-height: 400px; overflow: auto;">
+                            <table class="table table-bordered table-striped text-center" id="tablaUsuarios">
+                                <thead class="bg-dark text-white">
                                     <tr>
                                         <th>ID</th>
                                         <th>Username</th>
                                         <th>Email</th>
                                         <th>Estado</th>
                                         <th>ID Rol</th>
+                                        <th>Rol</th>
                                     </tr>
                                 </thead>
-                                <tbody class="text-center"></tbody>
+                                <tbody></tbody>
                             </table>
                         </div>
+
                     </div>
                 </div>
 
-                <!-- Buscar Usuario -->
+                <!-- BUSCAR -->
                 <div class="card mb-4">
-                    <div class="card-header bg-warning text-dark">Buscar Usuario por ID</div>
+                    <div class="card-header bg-warning">Buscar Usuario</div>
                     <div class="card-body">
-                        <div class="input-group mb-3">
-                            <input id="buscarId" type="number" class="form-control" placeholder="ID del usuario">
-                            <button onclick="buscarUsuario()" class="btn btn-outline-secondary">Buscar</button>
-                        </div>
+                        <input id="buscarId" type="number" class="form-control mb-2" placeholder="ID del usuario">
+                        <button onclick="buscarUsuario()" class="btn btn-dark mb-2">Buscar</button>
                         <div id="resultado"></div>
                     </div>
                 </div>
 
-                <!-- Actualizar Usuario -->
+                <!-- ACTUALIZAR -->
                 <div class="card mb-4">
                     <div class="card-header bg-secondary text-white">Actualizar Usuario</div>
                     <div class="card-body">
-                        <input id="updateId" type="number" class="form-control mb-2" placeholder="ID del usuario">
+                        <input id="updateId" class="form-control mb-2" placeholder="ID usuario">
                         <input id="updateUsername" class="form-control mb-2" placeholder="Nuevo username">
                         <input id="updateEmail" class="form-control mb-2" placeholder="Nuevo email">
                         <input id="updateEstado" class="form-control mb-2" placeholder="Nuevo estado">
                         <input id="updatePassword" class="form-control mb-2" placeholder="Nueva contraseña">
-                        <input id="updateIdRol" type="number" class="form-control mb-3" placeholder="Nuevo ID Rol">
+                        <input id="updateIdRol" type="number" class="form-control mb-2" placeholder="Nuevo ID Rol">
                         <button onclick="actualizarUsuario()" class="btn btn-warning">Actualizar</button>
                     </div>
                 </div>
 
-                <!-- Eliminar Usuario -->
+                <!-- ELIMINAR -->
                 <div class="card mb-4">
                     <div class="card-header bg-danger text-white">Eliminar Usuario</div>
                     <div class="card-body">
-                        <div class="input-group mb-3">
-                            <input id="deleteId" type="number" class="form-control" placeholder="ID a eliminar">
-                            <button onclick="eliminarUsuario()" class="btn btn-danger">Eliminar</button>
-                        </div>
+                        <input id="deleteId" type="number" class="form-control mb-2" placeholder="ID a eliminar">
+                        <button onclick="eliminarUsuario()" class="btn btn-danger">Eliminar</button>
                     </div>
                 </div>
 
             </div>
-            <!-- FIN CONTENIDO PRINCIPAL -->
 
         </div>
 
-        <!-- FOOTER -->
         <footer class="sticky-footer bg-white">
             <div class="container text-center">
-                <span>© Instituto Académico 2025 · Lenguajes de BD</span>
+                © Instituto Académico 2025
             </div>
         </footer>
     </div>
@@ -215,69 +180,97 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.4/js/sb-admin-2.min.js"></script>
 
 <script>
-    const API = "http://localhost:3000/usuario";
+    const API = "http://localhost:3000/usuarios";
 
+    // CREAR
     async function crearUsuario() {
         const data = {
-            username: document.getElementById("username").value,
-            password: document.getElementById("password").value,
-            email: document.getElementById("email").value,
-            estado: document.getElementById("estado").value,
-            idRol: parseInt(document.getElementById("idRol").value)
+            username: username.value,
+            password: password.value,
+            email: email.value,
+            estado: estado.value,
+            idRol: parseInt(idRol.value)
         };
+
         const res = await fetch(API, {
             method: "POST",
-            headers: {'Content-Type': 'application/json'},
+            headers: {"Content-Type": "application/json"},
             body: JSON.stringify(data)
         });
+
         alert(await res.text());
     }
 
+    // LISTAR
     async function listarUsuarios() {
         const res = await fetch(API);
         const data = await res.json();
-        const tbody = document.getElementById("tablaUsuarios").getElementsByTagName("tbody")[0];
+
+        const tbody = document.querySelector("#tablaUsuarios tbody");
         tbody.innerHTML = "";
-        data.forEach(usuario => {
-            const fila = document.createElement("tr");
-            fila.innerHTML = `
-                <td>${usuario.id}</td>
-                <td>${usuario.username}</td>
-                <td>${usuario.email}</td>
-                <td>${usuario.estado}</td>
-                <td>${usuario.idRol}</td>
+
+        data.forEach(u => {
+            tbody.innerHTML += `
+                <tr>
+                    <td>${u.id}</td>
+                    <td>${u.username}</td>
+                    <td>${u.email}</td>
+                    <td>${u.estado}</td>
+                    <td>${u.idRol}</td>
+                    <td>${u.rol ? u.rol.cargo : "Sin Rol"}</td>
+                </tr>
             `;
-            tbody.appendChild(fila);
         });
     }
 
+    // BUSCAR
     async function buscarUsuario() {
-        const id = document.getElementById("buscarId").value;
+        const id = buscarId.value;
         const res = await fetch(API + "/" + id);
         const data = await res.json();
-        document.getElementById("resultado").innerHTML = "<pre>" + JSON.stringify(data, null, 2) + "</pre>";
+
+        if (!data.id) {
+            resultado.innerHTML = `<div class="alert alert-danger">Usuario no encontrado</div>`;
+            return;
+        }
+
+        resultado.innerHTML = `
+            <div class="alert alert-info">
+                <strong>ID:</strong> ${data.id} <br>
+                <strong>Username:</strong> ${data.username} <br>
+                <strong>Email:</strong> ${data.email} <br>
+                <strong>Estado:</strong> ${data.estado} <br>
+                <strong>ID Rol:</strong> ${data.idRol} <br>
+                <strong>Rol:</strong> ${data.rol ? data.rol.cargo : "Sin Rol"}
+            </div>
+        `;
     }
 
+    // ACTUALIZAR
     async function actualizarUsuario() {
-        const id = document.getElementById("updateId").value;
+        const id = updateId.value;
+
         const data = {
-            username: document.getElementById("updateUsername").value,
-            email: document.getElementById("updateEmail").value,
-            estado: document.getElementById("updateEstado").value,
-            password: document.getElementById("updatePassword").value,
-            idRol: parseInt(document.getElementById("updateIdRol").value)
+            username: updateUsername.value,
+            email: updateEmail.value,
+            estado: updateEstado.value,
+            password: updatePassword.value,
+            idRol: parseInt(updateIdRol.value)
         };
+
         const res = await fetch(API + "/" + id, {
             method: "PUT",
-            headers: {'Content-Type': 'application/json'},
+            headers: {"Content-Type": "application/json"},
             body: JSON.stringify(data)
         });
+
         alert(await res.text());
     }
 
+    // ELIMINAR
     async function eliminarUsuario() {
-        const id = document.getElementById("deleteId").value;
-        const res = await fetch(API + "/" + id, { method: "DELETE" });
+        const id = deleteId.value;
+        const res = await fetch(API + "/" + id, {method: "DELETE"});
         alert(await res.text());
     }
 </script>
